Implementacja:  FE-037 - Panel zarządzania grupami agentów (`AgentGroupsPageComponent`), FE-038 - Komponent przypisania agentów do kolejki (`QueueAssignmentPanelComponent`), FE-039 - Integracja panelu przypisania z formularzem edycji kolejki